chunking and tests